--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cloudinary": "^1.41.3",
     "dotenv": "^16.4.5",
     "joi": "^17.13.3",
+    "mongodb": "^6.10.0",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
