--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,22 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node",
-      "config": {
-        "maxDuration": 10
+"builds": [
+      {
+          "src": "src/main.ts",
+          "use": "@vercel/node"
       }
-    }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/dist/main.js"
-    }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  },
-  "build": {
-    "env": {
-      "NODE_ENV": "production"
-    }
-  }
+      {
+          "src": "/(.*)",
+          "dest": "src/main.ts",
+          "methods": [
+              "GET",
+              "POST",
+              "PUT",
+              "patch",
+              "DELETE"
+          ]
+      }
+  ]
 }
