--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,28 @@
 {
   "version": 2,
-"builds": [
-      {
-          "src": "src/main.ts",
-          "use": "@vercel/node"
-      }
+  "builds": [
+    {
+      "src": "src/main.ts",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-      {
-          "src": "/(.*)",
-          "dest": "src/main.ts",
-          "methods": [
-              "GET",
-              "POST",
-              "PUT",
-              "patch",
-              "DELETE"
-          ]
-      }
-  ]
+    {
+      "src": "/(.*)",
+      "dest": "src/main.ts",
+      "methods": [
+        "GET",
+        "POST",
+        "PUT",
+        "PATCH",
+        "DELETE"
+      ]
+    }
+  ],
+  "build": {
+    "env": {
+      "NODE_ENV": "production"
+    },
+    "buildCommand": "npm install"
+  }
 }
